--- a/Notes/Part 3/3. Running Background Tasks.md
+++ b/Notes/Part 3/3. Running Background Tasks.md
@@ -28,7 +28,7 @@
 
 - **Additional Feature**
 
-  - Celery can schedule **periodic tasks** (like [cron jobs](https://www.google.com/search?q=cron+jobs)).
+  - Celery can schedule **periodic tasks** (like [cron jobs](https://www.google.com/search?q=cron+jobs)) using `celery beat`.
   - Example: run every hour, or every Sunday at 12 a.m.
 
 - **Key Benefit**
@@ -141,7 +141,7 @@ pipenv install celery
 
 Docs: [First steps with Django » Using Celery with Django](https://docs.celeryq.dev/en/stable/django/first-steps-with-django.html)
 
-1. **Create `celery.py` besides `settings.py`**
+1. **Create `celery.py` besides `settings.py` or `settings/`**
 
    - Set env var.
    - Create Celery instance.
@@ -153,10 +153,10 @@ Docs: [First steps with Django » Using Celery with Django](https://docs.celeryq
 2. **Configure Celery settings in `settings.py`**
 
    ```py
-   CELERY_BROKER_URL = "redis://localhost:6379/1"
+   CELERY_BROKER_URL = "redis://localhost:6379/0"
    ```
 
-   (`1` is the name of the DB, it's convention.)
+   Redis uses numbered databases (0 to 15 by default, 16 total).
 
 3. **Load Celery app in `__init__.py`**
 
@@ -240,7 +240,7 @@ Note:
    - Response returns **immediately** (non-blocking).
    - Task runs in background worker.
 
-> While development, if we create a task but the celery worker was already running, and we go to the url, then celery raises an error (`Received unregistered task`). So, we need to restart the celery worker after any new task addition.
+> While development, if we code a new task but the celery worker was already running, and we go to the url, then celery raises an error (`Received unregistered task`). So, we need to restart the celery worker after any new task addition.
 
 6. **Offline Workers**
 
@@ -289,7 +289,7 @@ Examples: periodic reports, sending emails, maintenance jobs.
 
   - Make sure worker is running.
 
-  - Start beat process separately:
+  - Start beat process separately (keep it running):
 
     ```sh
     celery --app storefront beat
