--- a/Notes/Part 3/6. Caching.md
+++ b/Notes/Part 3/6. Caching.md
@@ -103,7 +103,7 @@ Always run a **performance test first** to establish a baseline before optimizin
   CACHES = {
       "default": {
           "BACKEND": "django_redis.cache.RedisCache",
-          "LOCATION": "redis://127.0.0.1:6379/2",  # use a DB different from Celery's redis
+          "LOCATION": "redis://127.0.0.1:6379/1",  # use a DB different from Celery's redis
           "OPTIONS": {
               "CLIENT_CLASS": "django_redis.client.DefaultClient",
           },
@@ -114,6 +114,7 @@ Always run a **performance test first** to establish a baseline before optimizin
   - `BACKEND`: Uses **django-redis** as cache backend.
   - `LOCATION`: Points to Redis server (`localhost:6379`).
   - Database number should be **different** from the one used by Celery's redis (avoid conflicts).
+  - Redis uses numbered databases (0 to 15 by default, 16 total).
 
 ## Using the Low-level Cache API
 
@@ -187,7 +188,7 @@ Result: Average (ms) = ~`30`. (Without caching: it was ~`3000`)
 
 - Redis uses numbered databases (0 to 15 by default, 16 total).
 
-  - To select DB 2: `select 2`
+  - To select DB 1: `select 1`
 
 - Commands:
 
