--- a/Notes/Part 3/4. Automated Testing.md
+++ b/Notes/Part 3/4. Automated Testing.md
@@ -35,6 +35,8 @@
 
 - **Behavior-Driven Testing Example: `collections` endpoint**:
 
+  `POST /store/collections`
+
   - **Scenario 1:** Client not authenticated → expect **401 Unauthorized**.
   - **Scenario 2:** Authenticated, but user not admin → expect **403 Forbidden**.
   - **Scenario 3:** Admin but request missing collection name → expect **400 Bad Request** with error message.
@@ -42,7 +44,7 @@
 
 - **Summary**:
 
-  - Behavior can be checked manually (browser, API client) or automated with code.
+  - Behavior can be checked manually (using browser, API client) or automated with code.
   - Automated tests = fast, repeatable, reliable way to detect breakage.
   - Core takeaway: **Test the behaviour, not the implementation**.
 
@@ -58,48 +60,67 @@
   - `unittest` → Python built-in
   - `pytest` → separate install, widely preferred
 
+  <details>
+  <summary>See key differences</summary>
+
+  | Feature        | unittest                                           | pytest                                          |
+  | -------------- | -------------------------------------------------- | ----------------------------------------------- |
+  | Availability   | Built-in (standard library)                        | External library (requires installation)        |
+  | Test Structure | Object-oriented (classes inheriting from TestCase) | Functional (plain functions) or object-oriented |
+  | Assertions     | Specific assert methods (e.g., assertEqual)        | Plain assert statements                         |
+  | Fixtures       | setUp, tearDown methods                            | Flexible and powerful fixture system            |
+  | Readability    | More verbose                                       | More concise and Pythonic                       |
+  | Plugins        | Limited                                            | Extensive plugin ecosystem                      |
+  | Output         | Less detailed                                      | More detailed and informative                   |
+
+  <br></details>
+
 - **Why pytest is better**
 
   - More features
   - Large community + plugins
   - Less boilerplate → shorter, cleaner, more concise tests
 
-<details>
-<summary>See example comparison</summary>
+  <details>
+  <summary>See example comparison</summary>
 
-- **Using `unittest` (built-in)**
+  - **Using `unittest` (built-in)**
 
-  ```py
-  import unittest
+    ```py
+    def add(a, b):
+        return a + b
 
-  def add(a, b):
-      return a + b
+    # ---
 
-  class TestMath(unittest.TestCase):
-      def test_add(self):
-          result = add(2, 3)
-          self.assertEqual(result, 5)
+    import unittest
 
-  if __name__ == "__main__":
-      unittest.main()
-  ```
+    class TestMath(unittest.TestCase):
+        def test_add(self):
+            result = add(2, 3)
+            self.assertEqual(result, 5)
 
-- **Using `pytest`**
+    if __name__ == "__main__":
+        unittest.main()
+    ```
 
-  ```py
-  def add(a, b):
-      return a + b
+  - **Using `pytest`**
 
-  def test_add():
-      assert add(2, 3) == 5
-  ```
+    ```py
+    def add(a, b):
+        return a + b
 
-- **Key Differences**
+    # ---
 
-  - **`unittest`**: requires a test class, method definitions, and `self.assert*` methods.
-  - **`pytest`**: simpler, no class needed, just plain `assert`.
+    def test_add():
+        assert add(2, 3) == 5
+    ```
 
-<br></details>
+  - **Key Differences**
+
+    - **`unittest`**: requires a test class, method definitions, and `self.assert*` methods.
+    - **`pytest`**: simpler, no class needed, just plain `assert`.
+
+  <br></details>
 
 - **Installation (development dependency only)**
 
@@ -123,7 +144,9 @@ Docs: [pytest](https://docs.pytest.org), [pytest-django](https://pytest-django.r
 
   - Test function names must start with `test_`.
   - Name should describe the scenario being tested (not vague like `test_collections` or `test_create`).
-  - Example: `test_if_user_is_anonymous_returns_401`.
+  - Example: `test_anonymous_user_returns_401`.
+
+  Read: [Gemini](https://g.co/gemini/share/2361bd56a313)
 
 - **Organizing tests**
 
@@ -145,7 +168,7 @@ Docs: [pytest](https://docs.pytest.org), [pytest-django](https://pytest-django.r
 
   class TestCreateCollection:
 
-      def test_if_user_is_anonymous_returns_401(self):
+      def test_anonymous_user_returns_401(self):
 
           # Arrange
           client = APIClient()
@@ -166,7 +189,7 @@ Create config file `pytest.ini` in project root:
 
 ```ini
 [pytest]
-DJANGO_SETTINGS_MODULE = storefront.settings
+DJANGO_SETTINGS_MODULE = storefront.settings.dev
 testpaths = store/tests/ any/other/dir/ or/file.py
 ```
 
@@ -176,11 +199,11 @@ Run `pytest` → executes tests.
 >
 > **WARNING:**
 >
-> When we run the `pytest` command, it scans the _entire project folder_ (all the sibling folders of `pytest.ini` file) recursively, looking for any files that match its [test discovery patterns](https://docs.pytest.org/en/latest/explanation/goodpractices.html#conventions-for-python-test-discovery) _(`test\__.py`&`_\_test.py`_).
+> When we run the `pytest` command, it scans the _entire project folder_ (all the sibling folders of `pytest.ini` file) recursively, looking for any files that match its [test discovery patterns](https://docs.pytest.org/en/latest/explanation/goodpractices.html#conventions-for-python-test-discovery) (`test_*.py` & `*_test.py`).
 >
 > **Result:**
 >
-> This resulted in me debugging for an hour because **tests started failing** after `Part 3 > Caching` section, as I added a `test_cache.py` file in `locustfiles/` folder.  
+> This resulted in me debugging for an hour because **tests started failing** after `6. Caching` section, as I added a `test_cache.py` file in `locustfiles/` folder.  
 > Once pytest finds a file it thinks contains tests, it imports that file to load the tests into memory. It does this before it starts running any of our actual tests.  
 > **What exactly caused the test fail?** - When it imported `from locust import ...`, the Locust library automatically ran a process called "monkey-patching," which broke a standard Python module (`select`) that our database needs to connect. (To achieve high concurrency, `gevent` uses a technique called **monkey-patching**, where it replaces parts of Python's standard library (like the `select` module) with its own versions.)
 >
@@ -193,6 +216,9 @@ Run `pytest` → executes tests.
   - Comment out exactly the part of the code responsible for returning `401`.
   - Run test → should fail if test is valid.
   - If still passes → it's a "lying test" (bad test).
+
+> Let's validate our first test, `test_anonymous_user_returns_401`.  
+> Commented out `IsAdminOrReadOnly` from `store.views.CollectionViewSet`.
 
 - **Database access issue:**
 
@@ -227,7 +253,7 @@ Run `pytest` → executes tests.
   - Run directory: `pytest store/tests`
   - Run module: `pytest store/tests/test_collections.py`
   - Run class: `pytest store/tests/test_collections.py::TestCreateCollection`
-  - Run method: `pytest store/tests/test_collections.py::TestCreateCollection::test_if_user_is_anonymous_returns_401`
+  - Run method: `pytest store/tests/test_collections.py::TestCreateCollection::test_anonymous_user_returns_401`
   - Run by keyword: `pytest -k 'anonymous'`  
     Runs all test functions & classes whose name contains 'anonymous'.
 
@@ -290,83 +316,73 @@ Run `pytest` → executes tests.
 
 > Very important lesson.
 
-- **Test #2**: Test when user is authenticated but is not an admin.
+- **Test #2**: Test when user is **authenticated** but is not an admin.
 
 - **Setup**:
 
   Similar to the test we wrote above. Only differences:
 
-  - Use `client.force_authenticate(user)` to simulate authentication. `user` is a non-admin user object.
+  - Use `client.force_authenticate(user)` to simulate authentication. `user` is an **authenticated** non-admin user object.
   - Expected response → **403 Forbidden** (user lacks permission).
 
 ### Major mistake by Mosh (Lying test)
 
-- Mosh used:
+- **Mosh used:**
 
   ```py
   client.force_authenticate(user={})
   ```
 
-  But:
+- **Let's verify that it's not a lying test:**
 
-  > In Django REST Framework, `force_authenticate(user)` expects a **User object**, not an empty dictionary.
+  Exactly what part of the code is responsible for `403` on creation of a collection by an authenticated but non-admin user?
 
-- **But using `{}` still passes the test, this is because:**
+  → `permission_classes = [custom_permissions.IsAdminOrReadOnly]` (in `CollectionViewSet`)
+
+  So, remove it and we can see the test is now failing! So, not a lying test, right? Wrong.
+
+  Let's check with `permissions.IsAuthenticatedOrReadOnly`. The test passes! But it should've failed since now we're not enforcing admin status.
+
+  This implies that `user={}` doesn't actually make the user authenticated.
+
+  > In Django REST Framework, `force_authenticate(user)` expects a **User object**, not an empty dict.
+
+- **But using `{}` still passes the test, how?**
 
   - DRF sets `request.user = {}`.
-  - Since `{}` has no `is_authenticated`, permission checks fail → we get **403 Forbidden**.
+  - Since `{}` has no `is_staff`, permission (`custom_permissions.IsAdminOrReadOnly`) checks fail → we get **403 Forbidden**.
   - This is an **accidental hack**, not the right way.
-
-  We can verify that this test is a "**lying test**" (we learned this above only in `Running Tests` topic) by:
-
-  - Changing the exact part by which the test is succeeding. (No change in the test.)
-
-  - That part is `permission_classes = [custom_permissions.IsAdminOrReadOnly]` (in `store.views.CollectionViewSet`). Change it to `permission_classes = [permissions.IsAuthenticated]`.
-
-  - And we can see the test is still passing.
-
-    If `force_authenticate(user={})` is actually creating a (non-admin) user, then since we now have `permission_classes = [permissions.IsAuthenticated]`, the test should've failed since `assert 201 == 403`.
 
 - **So, what's the correct way?**
 
-  Using `user.objects.create_user()`:
+  Using `User.objects.create_user()`:
 
   ```py
-  from django.contrib.auth.models import User
-
-  user = User.objects.create_user(username='testuser', password='testpass')
-  client.force_authenticate(user=user)
-  ```
-
-  But since we're using our custom `User` model (`core.models.User`):
-
-  (`from core.models import User` -> makes the store app dependent on the `core` app -> bad coupling)
-
-  (Can't use `from django.conf import settings`, `settings.AUTH_USER_MODEL`, since it's just a `str` not actual reference.)
-
-  ```py
+  # from django.contrib.auth.models import User
+  # But since we're using custom `User` model (`core.models.User`):
+  # (Can't use `from django.conf import settings`, `settings.AUTH_USER_MODEL`, since it's just a `str` not actual reference.)
   from django.contrib.auth import get_user_model
 
   user = get_user_model().objects.create_user(username='testuser', password='testpass')
   client.force_authenticate(user=user)
   ```
 
-  With this in place, now our test passes the "lying test" test.
+  With this in place, now our test fails with `IsAuthenticatedOrReadOnly` → not a "lying test".
 
 - **Wouldn't this create a new user every time the test is ran?**
 
-  > Pytest creates a **temporary test database** (`test_<dbname>`) and deletes it after tests finish.
-  >
-  > With `@pytest.mark.django_db`, each test runs inside a transaction and Django rolls back after the test — so the DB is clean after each test.
-  >
-  > So:
-  >
-  > - **Test run scope** → pytest creates and deletes a test database.
-  > - **Test function scope** → Django uses transactions to isolate each test.
+  Pytest creates a **temporary test database** (`test_<dbname>`) and deletes it after tests finish.
 
-References: [ChatGPT](https://chatgpt.com/share/68b36214-60c8-800a-8adf-f0ebc5830b17), [Gemini](https://g.co/gemini/share/510bcaf8e42a)
+  Also, with `@pytest.mark.django_db`, each test runs inside a transaction and Django rolls back after the test — so the DB is clean after each test.
 
-- **P.S.:**
+  So:
+
+  - **Test run scope** → pytest creates and deletes a test database.
+  - **Test function scope** → Django uses transactions to isolate each test.
+
+  Ref: [ChatGPT](https://chatgpt.com/share/68b36214-60c8-800a-8adf-f0ebc5830b17), [Gemini](https://g.co/gemini/share/510bcaf8e42a)
+
+- **In-memory user:**
 
   Since in our current tests, we aren't doing anything with the user, we don't actually need to save it in the DB, we can just use an in-memory dummy user as well:
 
@@ -377,7 +393,7 @@ References: [ChatGPT](https://chatgpt.com/share/68b36214-60c8-800a-8adf-f0ebc583
 
   Most of the time though, we use `create_user` only.
 
-References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6), [Gemini](https://g.co/gemini/share/14ff28c31b01)
+  Ref: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6), [Gemini](https://g.co/gemini/share/14ff28c31b01)
 
 ## Single or Multiple Assertions
 
@@ -385,15 +401,15 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
 
   - Use `User(is_staff=True)` for authentication (admin).
 
-  - Post invalid data (e.g., `title=''`).
+  - Post invalid data (`title=''`).
 
   - Assertions:
 
     - `status_code == 400 BAD REQUEST`.
 
-    - Response body includes `title` error: `'title' in response.data`  
+    - Response body (dict) includes `'title'` key: `'title' in response.data`  
       (Don’t check exact wording because that's an implementation detail, which might change.)  
-      (Why `title` is returned? Because that's the field which was posted with bad data.)
+      (Why `'title'` is returned? Because that's the field which was posted with bad data.)
 
 - **Multiple Assertions in a Test**
 
@@ -421,7 +437,7 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
 
   - **Send GET request to collections endpoint**:
 
-    - Problem: If the endpoint has a bug, the test fails even though creation succeeded.
+    - Problem: If the GET endpoint has a bug, the test fails even though creation succeeded.
     - Leads to **false negatives** and noisy test failures.
 
 - **Checking `id > 0` guarantees DB save?**
@@ -439,7 +455,7 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
 **Why Fixtures?**
 
 - Remove duplication in test code.
-- Example: every test is creating an `APIClient` and importing it repeatedly → use fixtures to simplify.
+- Example: every test is creating an `APIClient` → use fixtures to simplify.
 
 ### Global Fixtures (`conftest.py`)
 
@@ -482,7 +498,14 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
         return create
     ```
 
-    Why do we need an inner function? Try doing this without it, you'd get the answer.
+    Why do we need an inner function? → To be able to pass an arg (`title` in this case)!
+
+    First thing, when we access a fixture in a test, the reference to the function is not received, instead, the function is called only once and saved, then the saved result is received in all the test functions. → The reason why we're using fixture instead of doing something again and again.  
+    If we call the function again and again, then it'd become the same! So, again, pytest executes the fixture and saves the value, and then the same value is passed on in the tests where the fixture is used as a param.
+
+    Now, if we want to pass an arg to the fixture, we can't, because we're not calling the fixture, that's called and saved implicitly. That's why we need inner function. We add an inner func, and the fixture return the ref to inner func, which we can then call and pass the args.
+
+    Without inner function:
 
     ```py
     @pytest.fixture
@@ -490,7 +513,10 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
         return api_client.post(path="/store/collections/", data={"title": title})
     ```
 
-    The problem is `create_collection` expects `title` to be a fixture as well! Not an arg.
+    So basically:
+
+    - Fixtures can only accept (other) fixtures as args.
+    - If we want to pass an arg, we need closure.
 
   - Usage in test:
 
@@ -500,7 +526,7 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
         assert ...
     ```
 
-### [Global] Fixture for Authentication
+### Fixture (Global) for Authentication
 
 - Repeated pattern: authenticating a user.
 
@@ -527,7 +553,7 @@ References: [ChatGPT](https://chatgpt.com/s/t_68b368cca1e081919fc47a3fb96f33b6),
 
 Also, **IMPORTANT**:
 
-Notice that since `api_client` fixture is only initialized once, that's only why we are able to `authenticate` and `create_collection` without sharing the `api_client` object explicitly, and it's still working!
+Notice that since `api_client` fixture is only initialized once, that's only why we are able to `authenticate` and `create_collection` without sharing the `api_client` object explicitly, and it's still working! (Not working with different instances. Tested.)
 
 ## Creating Model Instances
 
@@ -588,9 +614,9 @@ Alternate to [model_bakery](https://github.com/model-bakers/model_bakery): **[py
 
 ### Writing the Retrieval Test
 
-`test_if_collection_exists_returns_200`
+`test_valid_id_returns_200`
 
-- Arrange: create a collection (`collection = baker.make(Collection)`).
+- Arrange: Create a collection: `collection = baker.make(Collection)`
 
 - Act: `response = api_client.get(f'/store/collections/{collection.id}/')`
 
@@ -615,7 +641,7 @@ Alternate to [model_bakery](https://github.com/model-bakers/model_bakery): **[py
 **Exercise: Collection does not exist**
 
 ```py
-def test_if_collection_does_not_exists_returns_404(self, api_client):
+def test_non_existing_id_returns_404(self, api_client):
 
     response = api_client.get(path=f"/store/collections/1/")
     # any id would work since in the test db, no id would be present
