minor note add: jwt sign

--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -214,7 +214,7 @@ And then `migrate` to create the tables in our new Postgres DB.
 
 ## Generating Dummy Data
 
-> Used Mockaroo to generate and import dummy data (CSV/SQL) into MySQL tables for testing.
+> Used Mockaroo to generate and import dummy data (CSV/SQL) into ~~MySQL~~ Postgres tables for testing.
 
 [mockaroo.com](https://www.mockaroo.com)
 
