--- a/Notes/Part 2/5. Securing APIs.md
+++ b/Notes/Part 2/5. Securing APIs.md
@@ -27,6 +27,13 @@
        - If valid & not expired → access granted.
        - Else → error returned.
 
+> Mosh didn't explain how does a JWT is verified on the server as it doesn't store anything?  
+> → Django secret key is used to sign the JWT.
+> 
+> "The `SECRET_KEY` is used for **cryptographic signing** to protect your application's data from tampering. It's the foundation for securing sessions, forms (CSRF protection), and other signed data." - [Gemini](https://g.co/gemini/share/a2cb952628e5)
+> 
+> Now the working became clear.
+
 ### Summary
 
 - Token = session alternative for APIs.
