--- a/Notes/Part 3/5. Performance Testing.md
+++ b/Notes/Part 3/5. Performance Testing.md
@@ -8,7 +8,7 @@
 
 ## Installing Locust
 
-**Locust** is:
+**Locust** is a performance/load testing tool which is:
 
 - Simple to use.
 - Has a nice UI.
@@ -35,7 +35,7 @@ Docs: [Writing a locustfile](https://docs.locust.io/en/stable/writing-a-locustfi
 
 ### Setup
 
-- Create a `locustfiles/` folder (name can be anything but this is convention).
+- In project root, create a `locustfiles/` folder (name can be anything but this is convention).
 - Inside, create a test file (e.g. `browse_products.py`).
 - Define a class extending **`HttpUser`**.
 - Locust creates an instance of this class per simulated user.
@@ -64,6 +64,8 @@ Structuring: (Read TLDR) [Gemini](https://g.co/gemini/share/b15fd1963cdb), [Chat
    - JSON payload: `{"product": <id>, "quantity": 1}`
 
 - Important: **Always end URLs with a trailing slash (`/`)**, sometimes Django redirects and skews performance results.
+
+(See code `locustfiles.browse_products`.)
 
 ### Lifecycle Hook
 
@@ -134,7 +136,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 - Setup:
 
   - Deliberately introduced a performance issue by removing `prefetch_related` from `ProductViewSet`.
-  - For performance/load testing, **set `DEBUG=False`** so that tools like Debug Toolbar, Silk are not active, as they add overhead & skew results. (Won't be active only if they're added using `if DEBUG`.)
+  - For performance/load testing, **set `DEBUG=False`** (in case of separate settings files: change `DJANGO_SETTINGS_MODULE` env value in `manage.py` to use prod setting, if env var is defined in the system, need to change its value instead) so that tools like Debug Toolbar, Silk are not active, as they add overhead & skew results. (Would not run only if they're added using `if DEBUG`.)
 
 - Test Configuration:
 
@@ -143,7 +145,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 
 - Note:
 
-  - Numbers are not absolute indicators of production performance.  
+  - Numbers are not absolute indicators of production performance. (As it depends on hardware.)  
     Only use them for **relative comparisons** across endpoints/tests.
   - Numbers vary across runs and differ between dev and production.  
     Django dev server is slower and not production-grade.
@@ -162,7 +164,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
   - Use `select_related` / `prefetch_related` → reduce extra queries.
   - Use `only()` → fetch only required fields.
   - Use `defer()` → skip heavy fields not needed immediately. (See [Django ORM > Deferring Fields](/Notes/Part%201/4.%20Django%20ORM.md#deferring-fields))
-  - Use `values()` / `values_list()` → return (QuerySet of) dicts/lists instead of (QuerySet of) full model objects (cheaper).
+  - Use `values()` / `values_list()` → return (QuerySet of) dicts/lists (cheaper) instead of (QuerySet of) full model objects.
   - Use `count()` instead of fetching all objects (`all()`) and calling `len()`.
   - Use `bulk_create()` / `bulk_update()` instead of looping inserts/updates → fewer DB roundtrips.
 
@@ -213,7 +215,7 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
   4. Add URLs: `path('silk/', include('silk.urls', namespace='silk'))`
   5. `python manage.py migrate`
 
-  Ref: [GitHub](https://github.com/jazzband/django-silk?tab=readme-ov-file#installation)
+  Ref: [Installation](https://github.com/jazzband/django-silk?tab=readme-ov-file#installation)
 
 - **Usage:**
 
