--- a/Notes/Part 3/6. Caching.md
+++ b/Notes/Part 3/6. Caching.md
@@ -24,7 +24,8 @@ Store results of **expensive** operations (queries, API calls) in memory so futu
 
   - Always test before & after caching.
   - Don’t assume memory = always faster.
-  - Remember: _"Premature optimization is the root of all evil." - Donald Knuth_
+  - Remember:
+    > _"Premature optimization is the root of all evil." - Donald Knuth_
 
 ## Cache Backends
 
@@ -162,7 +163,7 @@ Instead of repeating caching logic in each view, use **decorators**.
 Benefits:
 
 - Removes need for low-level cache API.
-- Django auto-generates cache keys.
+- Django auto-generates unique cache keys.
 
 ## Verifying Optimizations
 
