--- a/Notes/Part 3/7. Preparing for Production.md
+++ b/Notes/Part 3/7. Preparing for Production.md
@@ -132,7 +132,7 @@ Docs: [Django › Logging](https://docs.djangoproject.com/en/5.2/topics/logging)
 - **Handlers** (decide what to do with logs):
 
   - `console` → `logging.StreamHandler` (writes to console).
-  - `file` → `logging.FileHandler` (writes to e.g. `general.log` using `filename`).
+  - `file` → `logging.FileHandler` (writes to e.g. `logs.log` using `filename`).
   - Different handlers can use different formatters.
 
 - **Loggers** (decide which messages to capture):
@@ -207,7 +207,7 @@ See code in `playground.views.test_logging()`.
    - **Allowed hosts** → only required in prod (to server domain/IP).
    - **Database config** → dev: Postgres localhost; prod: DB connection string.
    - **Installed apps** → keep in common; dev: append `debug_toolbar`, `silk`
-   - **Middlewares** → keep in common; dev: insert `DebugToolbar` at 0, append `Silky` (See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
+   - **Middlewares** → keep in common; dev: insert `DebugToolbar` at 0, `ForceDebugToolbar` at 1, append `Silky` (See: [Order of Middlewares](/Notes/Part%203/7.%20Preparing%20for%20Production.md#order-of-middlewares))
 
 5. For now, all other configs stay in `common.py`.
 
@@ -215,7 +215,7 @@ See code in `playground.views.test_logging()`.
 
 - Modify files that reference `DJANGO_SETTINGS_MODULE`:
 
-  In `manage.py`, `pytest.ini`, `asgi.py`, `celery.py`, `wsgi.py`:
+  In `manage.py`, `wsgi.py`, `asgi.py`, `pytest.ini`, `celery.py`:
 
   `storefront.settings` → `storefront.settings.dev`
 
@@ -234,7 +234,7 @@ Django’s built-in dev server:
 
 - A production-grade WSGI HTTP server.
 - Install with `pipenv install gunicorn`.
-- To run: `python -m gunicorn storefront.wsgi` (instead of `gunicorn storefront.wsgi`, [why](https://g.co/gemini/share/f5dad9203d53))
+- To run: `python -m gunicorn storefront.wsgi` (instead of `gunicorn storefront.wsgi`; [Why?](https://g.co/gemini/share/f5dad9203d53) TLDR: It's safer (more reliable))
   - `storefront.wsgi` is the entry point (from `wsgi.py` file in the project folder).
 - `wsgi.py`:
   - Sets `DJANGO_SETTINGS_MODULE` (e.g., `storefront.settings.dev`).
