--- a/Notes/Part 3/8. Deployment.md
+++ b/Notes/Part 3/8. Deployment.md
@@ -82,6 +82,8 @@ Generate secret key:
   - Ensures both the web app and background worker start properly on the platform.
   - Clearly defines which processes the platform should manage after deployment.
 
+[Google Procfile](https://www.google.com/search?q=Procfile)
+
 ## Provisioning a ~~MySQL~~ Database
 
 1. Get DB URL.
@@ -108,9 +110,9 @@ Generate secret key:
 
 - **Redis usage in our project**
 
-  - Used as **Celery message broker** (DB `1`) and **cache** (DB `2`), that's two instances.
+  - Used as **Celery message broker** (DB `0`) and **cache** (DB `1`), that's two instances.
   - Using two instances on production would cost us double.
-  - Using a single Redis instance for both broker and cache is fine, as Redis is a **key-value store**, not relational.
+  - Using a single Redis instance for both broker and cache is fine, as Redis is a **key-value store**, not relational, and keys would be different.
 
 1. Get Redis URL.
 
@@ -118,7 +120,7 @@ Generate secret key:
 
 3. Use `REDIS_URL` in django prod setting for both Celery broker and cache.
 
-   - Move `CELERY_BROKER_URL` & `CACHES` settings from `common.py` to `dev.py` & `prod.py` files for clarity.
+   - Move `CELERY_BROKER_URL` & `CACHES` settings from `common.py` to `dev.py` & `prod.py`.
 
 ## Provisioning an SMTP Server
 
@@ -161,7 +163,7 @@ Generate secret key:
   - Get DB connection string: `heroku config:get DATABASE_URL`
   - Open DataGrip → create new data source.
   - Choose **“URL only”** mode → paste connection string.
-  - Keep `jdbc:` prefix, then replace default URL with copied MySQL string.
+  - Keep `jdbc:` prefix, then replace default URL with copied DB string.
   - Test & connect → see tables and run custom queries.
 
 ## Dockerizing the App
@@ -172,13 +174,13 @@ Generate secret key:
 
 - **Why Docker?**
 
-  - Eliminates need to manually install/run MySQL, Redis, Celery, SMTP, etc.
+  - Eliminates need to manually install/run Postgres, Redis, Celery, SMTP, etc.
   - Ensures consistent versions/environments across dev & prod.
   - New developers avoid dependency/version mismatch.
 
 - **Setup**
 
-  - Provided `docker/` folder → move files to project root.
+  - From provided `docker/` folder → move files to project root.
   - `docker-compose.yml` defines all services:
     - `web` (Django app)
     - `postgres`
@@ -189,12 +191,15 @@ Generate secret key:
 
 - **Configuration changes (`dev.py`)**
 
-  - Change DB host → `localhost`/`127.0.0.1` → `mysql`.
+  - Change DB host → `localhost`/`127.0.0.1` → `postgres`.
   - Change Redis host → `localhost`/`127.0.0.1` → `redis`.
   - Change email host → `smtp4dev`.
   - Debug toolbar fix → force-enable with `DEBUG_TOOLBAR_CONFIG = {"SHOW_TOOLBAR_CALLBACK": lambda request: True}`.
 
-- **Stop local services:** Stop system MySQL/Redis/etc. to free ports before using Docker.
+  Why? Watch the video to understand.  
+  In short: Using docker, now these services won't run on `localhost`, but containers called `postgres`, `redis`, and so on.
+
+- **Stop local services:** Stop system Postgres/Redis/etc. to free ports before using Docker.
 
 - **Run with Docker Compose**
 
@@ -205,7 +210,7 @@ Generate secret key:
 
 - **Database & admin setup:** Run commands inside container:
 
-  - `docker compose run web bash` → open shell in web container.
+  - `docker compose run web bash` → open shell in `web` container.
   - `docker compose run web python manage.py seed_db` → seed database.
   - `docker compose run web python manage.py createsuperuser` → create admin.
 
@@ -215,4 +220,5 @@ Generate secret key:
 
 ---
 
-> NOTE: Mosh has not added a media hosting service, and mapped `MEDIA_URL` via `static()`. This results in no access to media (product images) on production site.
+> NOTE: Mosh has not added a media hosting service, and mapped `MEDIA_URL` via `static()`. This results in no access to media (product images) on production site.  
+> Read: [Media Files Setup @github.com/samyak1409/django](https://github.com/samyak1409/django#media-files-setup)
