--- a/Notes/Part 3/3. Running Background Tasks.md
+++ b/Notes/Part 3/3. Running Background Tasks.md
@@ -187,7 +187,7 @@ Note:
 - Later, we'd be using Docker Compose to run everything with a single cmd:
 
   ```sh
-  docker-compose up
+  docker compose up
   ```
 
 ## Creating and Executing Tasks
