--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -161,6 +161,18 @@ In `ProductViewSet`, use:
 queryset = Product.objects.prefetch_related('productimage_set')
 ```
 
+##
+
+**TODO:**
+
+Delete product image from filesystem when:
+
+1. The image is deleted using `DELETE` HTTP request. (Currently everything works, just the image on the filesystem stays there only.)
+2. Since deleting a product deletes all its images as well, verify if it is deleting from the filesystem as well or not, now that we've implemented `1.`.
+3. Delete previous image when a new image is uploaded using `PUT`.
+
+[Mosh didn't.]
+
 ## Validating Uploaded Files
 
 **ImageField** automatically validates file type (via **Pillow**).
